--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -1,12 +1,7 @@
 
 /* === typography ====== */ 
 
-body {
-  height: 100vh;
-  background-color: #111;
-}
-
-h1, h2, h3, h4, h5, h6, p, li, td, th, blockquote, label, input, textarea, select, span {
+h1, h2, h3, h4, h5, h6, p, li, td, th, blockquote, label, textarea, select, span {
   color: white;
 }
 
@@ -21,4 +16,258 @@ p, li, td, th, blockquote, label, input, textarea, select {
 
 p {
   margin-bottom: 1rem;
+}
+
+body {
+  /* height: 100vh; */
+  background-color: black;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* Header Section */
+.header-search-bar:focus,
+.header-search-bar:active,
+.header-search-bar:visited,
+.nav-link:hover {
+  color: white;
+}
+
+.nav-link {
+  position: relative;
+  font-weight: 600;
+  color: white;
+}
+
+.nav-link::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 100%; 
+  height: 2px;
+  background: black; 
+  transition: right 0.3s ease-in; 
+}
+
+.nav-link:hover::after {
+  right: 0; 
+  color: white
+}
+
+.header-search-button {
+  display: inline-block;
+  padding: .25rem .5rem;
+  text-decoration: none;
+  background-color: var(--white-ash);  
+  color: var(--gingerbread);             
+  border-radius: 3px;
+  text-align: center;
+  height: 2.5rem;
+  margin-left:.25rem;
+  border: 2px solid var(--gingerbread);
+}
+
+.header-search-button:hover {
+  transform: scale(1);
+  color: var(--white-ash);
+  background-color: var(--gingerbread);
+  border: 2px solid var(--white-ash);
+}
+
+@media (max-width: 810px) {
+  .header-links {
+    font-size:.82rem;
+    position: relative;
+    top:.1rem;
+  }
+}
+
+@media (max-width: 767.5px) {
+  .profile-pic {
+    display: none;
+  }
+  .nav-link {
+    font-size: 2rem;
+  }
+  .navbar-collapse {
+    /* background-color: blue; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+  }
+}
+
+
+
+
+/* Profile / Account */
+.account-container {
+  display: flex;
+}
+
+@media (max-width: 780px) {
+  .account-container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .form-container {
+    margin-left: 0rem;
+    padding: 0rem 0rem !important;
+    width: auto;
+    /* border: 2px solid green; */
+    color: blue;
+  }
+}
+
+@media (max-width: 470px) {
+  .form-container input {
+    width: 15rem !important;
+  }
+}
+
+.form-container {
+  padding: 3rem 8.5rem;
+  /* border: 2px solid green; */
+  height: 45rem;
+  width: 70%;
+}
+
+.account-h2  {
+  /* padding-top: 3rem; */
+  color: var(--light-teak);
+  border-bottom: 2px solid var(--light-teak);
+  display: inline;
+}
+
+.account-form-label {
+  color: var(--light-teak);
+  font-weight: bold;
+  padding-top: 1rem;
+  /* border: 2px solid green; */
+}
+
+.account-form input {
+  width: 20rem;
+}
+
+.account-password-button {
+  width: 10rem;
+  margin: 0rem 0rem;
+  background-color: white;  
+  border: 2px solid var(--light-teak);
+  border-radius: 5px;
+  color: var(--light-teak);
+}
+
+.account-email-button {
+  width: 15rem;
+  margin: 1rem 0rem;
+  background-color: white;  
+  border: 2px solid var(--light-teak);
+  border-radius: 5px;
+  color: var(--light-teak);
+  /* border: 2px solid red; */
+  margin-top: -2rem;
+}
+
+.profile-image-container {
+  /* border: 2px solid blue; */
+  width: 30%;
+  margin-right: 7rem;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.remove-image-button {
+  width: 15rem;
+  margin: 1rem 0rem;
+  background-color: white;  
+  border: 2px solid var(--light-teak);
+  border-radius: 5px;
+  color: var(--light-teak);
+  /* border: 2px solid red; */
+  /* margin-top: -2rem; */
+}
+
+@media (max-width: 780px) {
+  .profile-image-container {
+    margin: 0 auto;
+    width: 25rem;
+  }
+}
+
+.profile-image-label {
+  color: var(--light-teak);
+  font-weight: bold;
+  font-size: 2rem;
+  border-bottom: 2px solid var(--light-teak);
+  padding-top: 0rem;
+  margin-bottom: 1rem;
+}
+
+
+.profile-img {
+  width: 20rem;
+  height: 20rem;
+  border: 2px solid black;
+  border-radius: 12.5rem;
+  object-fit: cover;
+}
+
+.profile-image-h2 {
+  color: var(--light-teak);
+  font-weight: bold;
+  font-size: 2rem;
+  border-bottom: 2px solid var(--light-teak);
+  padding-top: 3rem;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
+.update-profile-button {
+  width: 15rem;
+  height: 3rem;
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin: 1rem 0rem;
+  background-color: white;  
+  border: 2px solid var(--light-teak);
+  border-radius: 5px;
+  color: var(--light-teak);
+  margin-bottom: 10rem;
+  /* border: 2px solid red; */
+}
+
+@media (max-width: 520px ) {
+  .update-profile-button-container {
+    width: 10rem;
+    /* border:2px solid green; */
+  }
+  .update-profile-button {
+    /* border: 2px solid blue; */
+    width: 100%;
+    font-size: 1rem;
+  }
+}
+
+.update-profile-button-container {
+  display: flex;  
+  flex-direction: end;
+  text-align: right;
+}
+
+.file-input {
+  color: var(--light-teak);
+
+}
+
+.file-input-label {
+  color: var(--light-teak);
+  font-weight: bold;
 }
