--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -12,6 +12,7 @@ h1, h2, h3, h4, h5, h6 {
 p, li, td, th, blockquote, label, input, textarea, select {
   font-size: 1.2rem;
   line-height: 165%;
+  color: black;
 }
 
 p {
