--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -7,16 +7,22 @@ h1, h2, h3, h4, h5, h6, p, li, td, th, blockquote, label, textarea, select, span
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
+  color: white
 }
 
-p, li, td, th, blockquote, label, input, textarea, select {
+p, li, td, th, blockquote, label, textarea, select {
   font-size: 1.2rem;
   line-height: 165%;
+  color: black
+}
+
+input {
   color: black;
 }
 
 p {
   margin-bottom: 1rem;
+  color: white;
 }
 
 body {
@@ -271,4 +277,26 @@ body {
 .file-input-label {
   color: var(--light-teak);
   font-weight: bold;
+}
+
+
+
+
+/* Posts section */
+
+.post {
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 20px;
+  margin-bottom: 20px;
+  background-color: #f0f0f0;
+}
+
+.post h3 {
+  margin-bottom: 10px;
+}
+
+.post button {
+  display: block;
+  margin-top: 10px;
 }
