--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -511,7 +511,7 @@ body {
   border-radius: 10px;
   padding: 20px;
   margin-bottom: 20px;
-  background-color: #f0f0f0;
+  background-color: var(--grey);
 }
 
 .post h3 {
